--- a/Diggy.html
+++ b/Diggy.html
@@ -88,6 +88,7 @@ var entities = [];
 var player;
 var playerTurn = true;
 var playerAbility = 0;
+var lives = 3;
 var abilities = [
     "Beta",
     "Sigma",
@@ -104,6 +105,8 @@ var lives = 3;
 var freezes = 0;
 var freezeFrames = 0;
 var difficultyLevel = 0;
+var enemDisc = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0];
+var SEI = false; //*S*how *E*nemy *I*nfo
 var quickMode = false;
 var seed;
 var seed2;
@@ -434,6 +437,7 @@ function populate(){
         }
         entities.push(new Entity(20 + x * (660/GAME.pFieldDim.x), 20 + y * (560/GAME.pFieldDim.y), (660/GAME.pFieldDim.x) - 1, (560/GAME.pFieldDim.y) - 1, TYPE, COLOR, null, x, y));
         tiles[y][x] = 2;
+        enemDisc[TAG - 2] = 1;
     }
     for(var f in features){
         if(random(seed) <= featureProbs[f] && GAME.level > 10){
@@ -474,6 +478,7 @@ function populate(){
             }
         }
     }
+    localStorage.enemDisc = enemDisc.toString();
 }
 function init(){
     GAME.start();
@@ -514,6 +519,17 @@ if(localStorage.freezes){
     freezes = Number(localStorage.freezes);
 }else{
     localStorage.freezes = 0;
+}
+if(localStorage.lives){
+    lives = Number(localStorage.lives);
+}else{
+    localStorage.lives = 3;
+}
+if(localStorage.enemDisc){
+    enemDisc = (localStorage.enemDisc).split(",");
+    for(var e in enemDisc){
+        enemDisc[e] = Number(enemDisc[e]);
+    }
 }
 function loadSeed(){
     if(difficultyLevel == 4){
@@ -657,6 +673,11 @@ document.onkeydown = function(e){
         break;
         case 67:
             playerAction("freeze");
+        break;
+        case 82:
+            if(confirm("Are you SURE you want to die/lose a life?")){
+                willPopulate = true;
+            }
         break;
     }
     playerTurn = false;
@@ -1389,6 +1410,9 @@ function drawPlayingField(){
     CTX.fillText("Floor: " + GAME.level, 710, 30);
     CTX.fillText("Shovels: " + shovels, 710, 50);
     CTX.fillText("Freezes: " + freezes, 710, 70);
+    if(difficultyLevel > 0 && difficultyLevel < 5){
+        CTX.fillText("Lives: " + lives, 710, 90);
+    }
     CTX.globalAlpha = 0.5;
     CTX.font = "100px Arial";
     if(freezeFrames > 0){
@@ -1427,6 +1451,9 @@ function draw(){
     }
     for(var i in texts){
         texts[i].draw();
+    }
+    if(SEI){
+        showEnemyInfo();
     }
     GAME.frameCount++;
 }
@@ -1582,8 +1609,32 @@ function switchCharacter(){
     shovels = localStorage.shovels;
     alert("Current ability: " + abilities[playerAbility]);
 }
+function capitalizeFirst(s){
+    //Ripped from Stack Overflow: http://stackoverflow.com/questions/1026069/how-do-i-make-the-first-letter-of-a-string-uppercase-in-javascript
+    return s && s[0].toUpperCase() + s.slice(1);
+}
 function showEnemyInfo(){
-    
+    var CTX = GAME.context;
+    CTX.fillStyle = "ffe5bb";
+    roundRect(CTX, 0, 0, 200, 600, 10, true, false);
+    CTX.fillStyle = "black";
+    CTX.font = "bold small-caps 22px Helvetica";
+    CTX.fillText("Enemies Discovered", 5, 40);
+    for(var i = 0; i < 9; i++){
+        if(enemDisc[i] != 0){
+            CTX.fillStyle = enemColors[i + 2];
+            roundRect(CTX, 25, i * (540/9) + 70, 40, 40, 8, true, false);
+            CTX.fillStyle = "black";
+            CTX.font = "20px Helvetica";
+            CTX.fillText(capitalizeFirst(enemTypes[i + 2]), 80, (i + 0.5) * (540/9) + 65);
+        }else{
+            CTX.fillStyle = "dedede";
+            roundRect(CTX, 25, i * (540/9) + 70, 40, 40, 8, true, false);
+            CTX.fillStyle = "black";
+            CTX.font = "20px Helvetica";
+            CTX.fillText("—•- ??? -•—", 80, (i + 0.5) * (540/9) + 65);
+        }
+    }
 }
 </script>
 </head>
@@ -1595,12 +1646,13 @@ function showEnemyInfo(){
     <button type="button" class="move" onclick="playerAction('special')" style="position:absolute;left:1050px;top:250px;">Special</button>
     <button type="button" class="pup" onclick="playerAction('shovel')" style="position:absolute;left:950px;top:400px;">Shovel</button>
     <button type="button" class="pup" onclick="playerAction('freeze')" style="position:absolute;left:1200px;top:400px;">Freeze</button>
+    <button type="button" onclick="willPopulate=true">Instantly Die</button>
     <button type="button" onclick="resetProgress()">Reset Progress</button>
     <button type="button" onclick="instructions(false)">How to Play</button>
     <button type="button" onclick="toggleQuickMode()">Quick Mode</button>
     <button type="button" onclick="speedrunMode()">Speedrun Mode</button>
     <button type="button" onclick="switchCharacter()">Switch Ability</button>
-    <button type="button" onclick="showEnemyInfo()">Enemy Info</button>
+    <button type="button" onclick="SEI=!SEI">Enemy Info</button>
     <div id="seed"></div>
     <div id="timer"></div>
 </body>
